// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputField should render correctly 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gumgmm {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
}

.cache-1gumgmm[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1gumgmm[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:hover,
.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #3b1a61;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border: 1px solid #3b1a61;
}

.cache-1owv7xc {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  color: #d8c5fc;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-1owv7xc:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wnp022-sizeStyles {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-1lzkrcz {
  color: #464959;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-1lzkrcz::-webkit-outer-spin-button,
.cache-1lzkrcz::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1lzkrcz::-webkit-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::-moz-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz:-ms-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::placeholder {
  color: #6d717c;
}

.cache-1lzkrcz[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.cache-1e2vjm {
  color: #464959;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

.cache-ug2lsd {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-ug2lsd:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ug2lsd:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-ug2lsd:hover,
.cache-ug2lsd:active {
  background: #e6daff;
  color: #3b1a61;
}

.cache-hr3ts3-sizeStyles {
  vertical-align: middle;
  fill: #521094;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp ehpbis70"
    >
      <div
        class="cache-6hw7ss ehpbis70"
      >
        <div
          aria-disabled="false"
          class="cache-1gumgmm exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 cache-1owv7xc e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-wnp022-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-1lzkrcz exvap482"
              id=":r0:"
              name="test"
              style="width: 16px;"
              type="number"
              value="0"
            />
            <span
              class="cache-1e2vjm exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 cache-ug2lsd e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="cache-hr3ts3-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gumgmm {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
}

.cache-1gumgmm[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1gumgmm[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:hover,
.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #3b1a61;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border: 1px solid #3b1a61;
}

.cache-1owv7xc {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  color: #d8c5fc;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-1owv7xc:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wnp022-sizeStyles {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-1lzkrcz {
  color: #464959;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-1lzkrcz::-webkit-outer-spin-button,
.cache-1lzkrcz::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1lzkrcz::-webkit-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::-moz-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz:-ms-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::placeholder {
  color: #6d717c;
}

.cache-1lzkrcz[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.cache-epkb7s {
  color: #b5b7bd;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp ehpbis70"
    >
      <div
        class="cache-6hw7ss ehpbis70"
      >
        <div
          aria-disabled="true"
          class="cache-1gumgmm exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 cache-1owv7xc e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-wnp022-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-1lzkrcz exvap482"
              disabled=""
              id=":r5:"
              name="test"
              style="width: 16px;"
              type="number"
              value="0"
            />
            <span
              class="cache-epkb7s exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 cache-1owv7xc e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-wnp022-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gumgmm {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
}

.cache-1gumgmm[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1gumgmm[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:hover,
.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #3b1a61;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border: 1px solid #3b1a61;
}

.cache-ug2lsd {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-ug2lsd:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ug2lsd:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-ug2lsd:hover,
.cache-ug2lsd:active {
  background: #e6daff;
  color: #3b1a61;
}

.cache-hr3ts3-sizeStyles {
  vertical-align: middle;
  fill: #521094;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-1lzkrcz {
  color: #464959;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-1lzkrcz::-webkit-outer-spin-button,
.cache-1lzkrcz::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1lzkrcz::-webkit-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::-moz-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz:-ms-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::placeholder {
  color: #6d717c;
}

.cache-1lzkrcz[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.cache-1e2vjm {
  color: #464959;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

.cache-1owv7xc {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  color: #d8c5fc;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-1owv7xc:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wnp022-sizeStyles {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp ehpbis70"
    >
      <div
        class="cache-6hw7ss ehpbis70"
      >
        <div
          aria-disabled="false"
          class="cache-1gumgmm exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 cache-ug2lsd e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="cache-hr3ts3-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-1lzkrcz exvap482"
              id=":rf:"
              name="test"
              style="width: 32px;"
              type="number"
              value="20"
            />
            <span
              class="cache-1e2vjm exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 cache-1owv7xc e112qvla0"
            disabled=""
            type="button"
          >
            <div>
              <svg
                class="cache-wnp022-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-kwbqjp {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-6hw7ss {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1gumgmm {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
}

.cache-1gumgmm[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1gumgmm[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:hover,
.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus {
  border: 1px solid #3b1a61;
}

.cache-1gumgmm:not([aria-disabled='true']) .exvap483:focus-within {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border: 1px solid #3b1a61;
}

.cache-ug2lsd {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #521094;
  margin: 0 8px;
  width: 32px;
  height: 32px;
}

.cache-ug2lsd:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ug2lsd:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-ug2lsd:hover,
.cache-ug2lsd:active {
  background: #e6daff;
  color: #3b1a61;
}

.cache-hr3ts3-sizeStyles {
  vertical-align: middle;
  fill: #521094;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-192mx7g {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: 100%;
}

.cache-1lzkrcz {
  color: #464959;
  background-color: transparent;
  font-size: 16px;
  border: none;
  outline: none;
  position: relative;
  margin-right: 4px;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.cache-1lzkrcz::-webkit-outer-spin-button,
.cache-1lzkrcz::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.cache-1lzkrcz::-webkit-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::-moz-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz:-ms-input-placeholder {
  color: #6d717c;
}

.cache-1lzkrcz::placeholder {
  color: #6d717c;
}

.cache-1lzkrcz[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.cache-1e2vjm {
  color: #464959;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 8px;
}

<form
    novalidate=""
  >
    <div
      class="cache-kwbqjp ehpbis70"
    >
      <div
        class="cache-6hw7ss ehpbis70"
      >
        <div
          aria-disabled="false"
          class="cache-1gumgmm exvap480"
          data-error="false"
        >
          <button
            aria-label="Minus"
            class="exvap484 cache-ug2lsd e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="cache-hr3ts3-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H5V11H19V13Z"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="assertive"
            class="cache-192mx7g exvap483"
            role="status"
          >
            <input
              aria-label="Number Input"
              class="cache-1lzkrcz exvap482"
              id=":ra:"
              name="test"
              style="width: 32px;"
              type="number"
              value="10"
            />
            <span
              class="cache-1e2vjm exvap481"
            />
          </div>
          <button
            aria-label="Plus"
            class="exvap484 cache-ug2lsd e112qvla0"
            type="button"
          >
            <div>
              <svg
                class="cache-hr3ts3-sizeStyles e5nqbfp0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
